@startuml
skinparam classAttributeIconSize 0

class Controller {
  +recibirSolicitud()
  +devolverRespuesta()
}

class Service {
  +validarDatos()
  +procesarOperacion()
}

class Repository {
  +save()
  +get()
  +get_all()
  +update()
  +delete()
}

class Entity {
  Dueño
  Mascota
  Cita
  Usuario
}

database MySQL

Controller --> Service
Service --> Repository
Repository --> Entity
Entity --> MySQL
@enduml

